--- a/src/DoomedDatabases.Postgres/DoomedDatabases.Postgres.csproj
+++ b/src/DoomedDatabases.Postgres/DoomedDatabases.Postgres.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.0.0" />
     <PackageReference Include="Npgsql" Version="3.2.5" />
   </ItemGroup>
 
