--- a/src/DoomedDatabases.Postgres/DoomedDatabases.Postgres.csproj
+++ b/src/DoomedDatabases.Postgres/DoomedDatabases.Postgres.csproj
@@ -1,15 +1,20 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFrameworks>netstandard1.3;net8.0</TargetFrameworks>
     <Version>0.3.0</Version>
     <Authors>Ufuk Hacıoğulları</Authors>
     <Desciption>Dynamically create Postgres databases for testing</Desciption>
   </PropertyGroup>
 
-  <ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
     <PackageReference Include="Npgsql" Version="8.0.1" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard1.3'">
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="1.0.0" />
+    <PackageReference Include="Npgsql" Version="3.2.7" />
   </ItemGroup>
 
 </Project>
